--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </header>
     <section id="Back">
 	
-        <p style="font-size: 30px">This is a Blog page main branch.</p>
+        <p style="font-size: 30px">hello there welcome to the blog.</p>
     </section>
     <footer style="background-color: #050505;">
        <audio id="bgm" loop>
